--- a/dyn.com/index.html
+++ b/dyn.com/index.html
@@ -25,7 +25,7 @@
 
 <div id="header-wrapper">
 	<div id="header">
-		<a id="header-logo" href="index.html">Dyn</a>                                <!-- LOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOGGGGGGGGGGGGGGGGOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO  -->
+		<a id="header-logo" href="index.html">Dyn</a>						<!-- LOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOGGGGGGGGGGGGGGGGOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO  -->
 			<div class="menu-header"><ul id="menu-new-top-nav" class="menu"><li class="disabled top-level first-menu-item menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children"><a href="#">Products</a>
 <ul class="sub-menu">
 	<li class="t-m-nav-arrow menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children"><a href="traffic-management/index.html">Traffic Management<p class="sub-description">Our premium DNS product line</p></a>
@@ -212,7 +212,7 @@ var domain_search_page = "Page: "+document.location.hostname + document.location
 	</form>
 </div>
 </div></div><div class='widefield lang-circle'>
-		  	<h4>Are you ready to be on our VIP Email List?</h4>
+		  	<h4>Are you ready to be on our legendary VIP Email List?</h4>
 		  	<p>As an approved subscriber, you'll get more than just bragging rights with benefits like:</p>
 		  	<ul id='newsletter-offer'>
 		  		<li>Exclusive offers and product discounts</li>
